Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41373

QFileDialog extermely slow and non-reactive with large number of files

    XMLWordPrintable

Details

    • 18df9b7309a64e6d2c864c140664523e60ba6e7d (qt/tqtc-qtbase/5.15)

    Description

      When explicitely opening a QFileDialog with Non-Native dialogs, like:

      {
        QFileDialog *dialog = new QFileDialog();
        dialog->setOption(QFileDialog::Option::DontUseNativeDialog);
        dialog->setOption(QFileDialog::Option::DontUseCustomDirectoryIcons); // <!-- does not change the behavior
        dialog->exec();
        delete dialog;
      }
      

      the Widget will create its own Dialog, not using the Windows-Standard controls.
      Now, when changing to a directory with a high amount of files (and probably slow connection speed like mapped network drives with 50.000+ files), the Application UI blocks completely while processing all of these files.

      Sometimes the user does not want to look at these files, he probably wants to specifiy the filename in the inputline manually. Here, the dialog should scan the files in the background, remaining usable to the user. Even if there would be a possibility to abort the dialog, the filesystem still gets analyzed in the background.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-41373
          # Subject Branch Project Status CR V

          Activity

            People

              vhilshei Volker Hilsheimer
              roalter Luis Roalter
              Votes:
              3 Vote for this issue
              Watchers:
              14 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: